# app-prproj-to-path-copy

./: .gitignore  CHANGELOG.md  CLAUDE.md  IDEIA.md  IMPLEMENTATIONS.md  OPERATIONS.md  README.md  pyproject.toml  requirements.txt  run.py
installer/: installer.iss
scripts/: build_release.ps1  gen_icon.py
src/: __init__.py  app.py  classifier.py  config.py  paths.py  prproj_reader.py  script_generator.py
tests/: conftest.py  test_classifier.py  test_prproj_reader.py  test_script_generator.py
