[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-prproj-to-path-copy"
version = "0.1.0"
description = "Desktop app que extrai midias de um .prproj do Premiere e consolida tudo via Shell.Application (janela nativa de copia do Windows)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Lucas", email = "114371434+lucasftas@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = [
    "premiere", "prproj", "adobe", "video-editing",
    "windows", "robocopy", "shell-application", "media-consolidation",
    "tkinter", "desktop-app",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Filesystems",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lucasftas/app-prproj-to-path-copy"
Issues = "https://github.com/lucasftas/app-prproj-to-path-copy/issues"
Changelog = "https://github.com/lucasftas/app-prproj-to-path-copy/blob/main/CHANGELOG.md"

[project.scripts]
prproj-copy = "src.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
